# expense-tracker-fastapi

./: .env.backup  .gitignore  README.md  compose.yaml  database.py  expense.db  main.py  models.py  pyproject.toml  routers.py
app/: config.py  database.py  main.py  models.py  schemas.py  utils.py
app/api/: dependencies.py  routers.py
app/core/: security.py
app/models/: models.py
app/routers/: expenses.py  routers.py  user.py
app/schemas/: schemas.py
app/services/: expenses.py  user.py
