[project]
name = "expense-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.136.1",
    "pydantic>=2.13.4",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.47.0",
    "aiosqlite>=0.18.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.0.0",
    "passlib[bcrypt]>=1.7.4",
    "scalar-fastapi>=1.8.2",
]
